--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Medilix - Healthcare & Medical Bootstrap HTML5 Template</title>
-    <meta name="description" content="Medilix - Healthcare & Medical Bootstrap HTML5 Template">
-    <meta name="author" content="ahmmedsabbirbd">
+    <meta name="description" content="">
+    <meta name="author" content="Shravan phutane">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico in the root directory -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/imgs/favicon.svg">
@@ -937,7 +937,7 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="footer-5__copyright text-lg-start text-center">
-                                <p class="mb-0">© <a href="index.html">Medilix</a>  2024 | All Rights Reserved</p>
+                                <p class="mb-0">© <a href="index.html">Dr Aniket Prajapati</a>  2024 | All Rights Reserved</p>
                             </div>
                         </div>
 
