--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Medilix - Healthcare & Medical Bootstrap HTML5 Template</title>
-    <meta name="description" content="">
+    <title>Dr Aniket Prajapati - Homeopathic</title>
+    <meta property="og:title" content="DR ANIKET PRAJAPATI"/>
+    <meta name="description" content="The founder member of healing hands caring hearts clinic is a Homeopathic physician with a speciality in treating thyroid , pcod , piles , females complaints , joint pain and acute complaints like (cold cough fever ) also trained and certified in sexology and cupping therapy">
     <meta name="author" content="Shravan phutane">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico in the root directory -->
