--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
 
 <!-- preloader start -->
 <div id="preloader">
-    <div class="preloader-close preloader-close__5">x</div>
     <div class="sk-three-bounce">
         <div class="sk-child sk-bounce1 home-5"></div>
         <div class="sk-child sk-bounce2 home-5"></div>
@@ -442,7 +441,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="medilix-video__media wow clip-a-z">
-                        <img class="img-fluid " data-parallax='{"scale": 1.2, "smoothness": 15}' src="assets/imgs/medilix-video/medilix-video.jpg" alt="image not found">
+                        <img class="img-fluid " data-parallax='{"scale": 1.2, "smoothness": 15}' src="assets/imgs/video/video-img.jpg" alt="image not found">
         
                         <a href="https://www.youtube.com/watch?v=dyNpojnbNT4" class="popup-video zooming" data-effect="mfp-move-from-top vertical-middle">
                             <i class="fa-thin fa-play"></i>
@@ -878,7 +877,8 @@
                         </div>
 
                         <div class="footer-5__content">
-                            <p class="mb-0">Lorem Ipsum is simply is dumiomy is text Lorem Ipsum is simply  Ipsum is simply is dumiomy is text </p>
+                            <h5 class="section__subtitle mb-20 mb-xs-10 title-animation" style="color: white !important;">Address</h5>
+                            <p class="mb-0">Shop no 10, Yashwant Swapna CHS LTD, opposite Punjab National Bank, near Flyover, Vartak Ward, Virar West, Virar, Maharashtra 401303</p>
                         </div>
 
                         <div class="footer-5__social mt-30 mt-xs-30">
@@ -939,16 +939,13 @@
                         <div class="col-lg-6">
                             <div class="footer-5__copyright text-lg-start text-center">
                                 <p class="mb-0">© <a href="index.html">Dr Aniket Prajapati</a>  2024 | All Rights Reserved</p>
+
                             </div>
                         </div>
 
                         <div class="col-lg-6">
                             <div class="footer-5__copyright-menu">
-                                <ul>
-                                    <li><a href="about-us.html">Trams & Condition</a></li>
-                                    <li><a href="about-us.html">Privacy Policy</a></li>
-                                    <li><a href="contact.html">Contact Us</a></li>
-                                </ul>
+                                <p class="mb-0">Designed By <a href="https://shravan04-portfolio.netlify.app/">Shravan Phutane</a></p>
                             </div>
                         </div>
                     </div>
